<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <GVL Name="GVL_EM1K0_GMD_VGC_1" Id="{0e4afe6e-4514-4238-8b04-cc44d24dbdeb}">
    <Declaration><![CDATA[VAR_GLOBAL

// VGC Valves

{attribute 'pytmc' := ' pv: fb_EM1K0_GMD_VGC_1 '}
fb_EM1K0_GMD_VGC_1 : FB_VGC;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>